# erpnext-amex

./: .gitignore  DEPLOYMENT.md  IMPLEMENTATION_GUIDE.md  INSTALLATION_CHECKLIST.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  RENAME_COMPLETE.md  STRUCTURE_FINAL.md  STRUCTURE_VERIFIED.md  UI_ENHANCEMENTS_COMPLETE.md  UI_UPDATES.md  hooks.py  license.txt  patches.txt  pyproject.toml  requirements.txt  setup.py
amex_integration/: api.py  hooks.py
amex_integration/amex_integration/: api.py
amex_integration/amex_integration/utils/: classification_memory.py  csv_parser.py  journal_entry_creator.py  ml_classifier.py  slack_notifier.py  vendor_enrichment.py
amex_integration/config/: desktop.py
amex_integration/doctype/amex_integration_settings/: amex_integration_settings.py
amex_integration/doctype/amex_transaction/: amex_transaction.json  amex_transaction.py
amex_integration/doctype/fraud_report/: fraud_report.json  fraud_report.py
amex_integration/page/amex_review/: amex_review.html  amex_review.js  amex_review.py
amex_integration/report/amex_import_status/: amex_import_status.py
amex_integration/utils/: ml_classifier.py  vendor_enrichment.py
config/: docs.py
erpnext_amex/: __init__.py  api.py  hooks.py  modules.txt
erpnext_amex/utils/: csv_parser.py  journal_entry_creator.py  slack_notifier.py
public/css/: amex_integration.css
public/js/: amex_integration.js  erpnext_amex.js
sagemaker/: README.md  inference.py  requirements.txt  train.py
scripts/: mapping_config.example.json  transform_netsuite_to_erpnext.py
(+32 files in other folders)
