[project]
name = "erpnext_amex"
version = "0.0.1"
description = "AMEX expense classification and import system for ERPNext"
authors = [
    { name = "Your Company" }
]
dependencies = [
    "pandas>=2.0.0",
    "boto3>=1.26.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench]
dev-dependencies = []

